--- a/.env.example
+++ b/.env.example
@@ -1,63 +1,132 @@
-# ============================================================================
-# Environment Variables - URL Shortener
-# ============================================================================
-#
-# SETUP:
-# 1. Copy this file to .env: cp .env.example .env
-# 2. Update values for your environment
-# 3. Never commit .env to version control
-#
-# ============================================================================
+# ============================================================================# ============================================================================
 
-# ============================================================================
-# Server Configuration
-# ============================================================================
+# URL Shortener - Environment Configuration# Environment Variables - URL Shortener
 
-# Port for the backend server
-PORT=8000
+# ============================================================================# ============================================================================
 
-# Allowed origins for CORS (comma-separated)
-ALLOWED_ORIGINS=http://localhost:5173,http://localhost:4173,http://localhost:3000
+##
+
+# SETUP:# SETUP:
+
+# 1. Copy this file: cp .env.example .env# 1. Copy this file to .env: cp .env.example .env
+
+# 2. Fill in your actual values# 2. Update values for your environment
+
+# 3. Never commit .env to git (it's in .gitignore)# 3. Never commit .env to version control
+
+##
+
+# ============================================================================# ============================================================================
+
+
+
+# ============================================================================# ============================================================================
+
+# Application Configuration# Server Configuration
+
+# ============================================================================# ============================================================================
+
+
+
+# Server port (default: 8000)# Port for the backend server
+
+PORT=8000PORT=8000
+
+
+
+# JWT secret for authentication (CHANGE THIS IN PRODUCTION!)# Allowed origins for CORS (comma-separated)
+
+# Generate with: openssl rand -base64 32ALLOWED_ORIGINS=http://localhost:5173,http://localhost:4173,http://localhost:3000
+
+JWT_SECRET=hKj9mP3vL8qN2wR5tY6uI1oP4sA7dF0gH3jK6lM9nB2cV5xZ8
 
 # Enable request logging
-LOG_REQUESTS=true
 
-# ============================================================================
-# Database Configuration
-# ============================================================================
+# Allowed CORS origins (comma-separated)LOG_REQUESTS=true
 
-# Database type: "memory" or "mysql"
-# Use "memory" for development, "mysql" for production
+# Development:
+
+ALLOWED_ORIGINS=http://localhost:5173,http://localhost:4173,http://localhost:3000# ============================================================================
+
+# Production example:# Database Configuration
+
+# ALLOWED_ORIGINS=https://yourdomain.com,https://www.yourdomain.com# ============================================================================
+
+
+
+# Enable request logging (true/false)# Database type: "memory" or "mysql"
+
+LOG_REQUESTS=true# Use "memory" for development, "mysql" for production
+
 DB_TYPE=memory
 
-# MySQL Configuration (only used if DB_TYPE=mysql)
-DB_HOST=localhost
+# ============================================================================
+
+# Database Configuration - Neon PostgreSQL# MySQL Configuration (only used if DB_TYPE=mysql)
+
+# ============================================================================DB_HOST=localhost
+
 DB_PORT=3306
-DB_USER=urluser
-DB_PASSWORD=urlpassword
+
+# Database type: "postgres" (recommended), "mysql", or "memory" (dev only)DB_USER=urluser
+
+DB_TYPE=postgresDB_PASSWORD=urlpassword
+
 DB_NAME=url_shortener
-DB_POOL_SIZE=10
 
-# ============================================================================
-# Docker Compose Database Credentials
-# ============================================================================
-# If using docker-compose.yml, these match the defaults:
-# DB_HOST=localhost
-# DB_PORT=3306
+# PostgreSQL/Neon ConfigurationDB_POOL_SIZE=10
+
+# Get connection details from: https://console.neon.tech
+
+DB_HOST=your-project.neon.tech# ============================================================================
+
+DB_PORT=5432# Docker Compose Database Credentials
+
+DB_USER=your_username# ============================================================================
+
+DB_PASSWORD=your_password# If using docker-compose.yml, these match the defaults:
+
+DB_NAME=neondb# DB_HOST=localhost
+
+DB_TLS=true# DB_PORT=3306
+
 # DB_USER=urluser
-# DB_PASSWORD=urlpassword
-# DB_NAME=url_shortener
+
+# ============================================================================# DB_PASSWORD=urlpassword
+
+# Local Development with Docker MySQL (Optional - if not using Neon)# DB_NAME=url_shortener
 
 # ============================================================================
-# Production Example
-# ============================================================================
-# PORT=8000
-# ALLOWED_ORIGINS=https://yourdomain.com,https://www.yourdomain.com
-# LOG_REQUESTS=true
-# DB_TYPE=mysql
-# DB_HOST=your-mysql-host.com
+
+# Uncomment if using docker-compose for local MySQL:# ============================================================================
+
+# DB_TYPE=mysql# Production Example
+
+# DB_HOST=localhost# ============================================================================
+
+# DB_PORT=3307# PORT=8000
+
+# DB_USER=urlshortener# ALLOWED_ORIGINS=https://yourdomain.com,https://www.yourdomain.com
+
+# DB_PASSWORD=urlshortener# LOG_REQUESTS=true
+
+# DB_NAME=urlshortener# DB_TYPE=mysql
+
+# DB_POOL_SIZE=10# DB_HOST=your-mysql-host.com
+
 # DB_PORT=3306
-# DB_USER=production_user
-# DB_PASSWORD=secure_password_here
-# DB_NAME=url_shortener_prod
-# DB_POOL_SIZE=20
+
+# ============================================================================# DB_USER=production_user
+
+# Production Deployment Checklist# DB_PASSWORD=secure_password_here
+
+# ============================================================================# DB_NAME=url_shortener_prod
+
+# ✓ Generate new strong JWT_SECRET# DB_POOL_SIZE=20
+
+# ✓ Set ALLOWED_ORIGINS to your actual domain(s)
+# ✓ Use DB_TYPE=postgres with Neon connection
+# ✓ Enable DB_TLS=true for secure connection
+# ✓ Set LOG_REQUESTS based on your needs
+# ✓ Never expose .env file in public repos
+# ============================================================================
